2010-10-13 Dominik Reichardt <dominus@users.sourceforge.net>
	* updated Documentation and FAQ and many other files to reflect an upcoming release of version 1.4.9RC1
	* NEWS: updated with what we've done the last six years
	* AUTHORS: added a couple of authors and changed some email addresses according to our "About Us" page
	* docs/release.txt: updated a bit
	 
2010-10-13  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: revert change from r6329 that made monsters attack only
	  rarely. Also added a FIXME, since the expressions involved don't do what
	  they seem to do.

2010-10-11  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gamerend.cc: fix regression from r6352 that ignored light sources
	* gameclk.cc: fix regression from r5763 that delayed dungeon light changes

2010-10-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* ibuf8.cc, ibuf16.cc: take pitch into account in fill_static
	* bggame.cc, sigame.cc: remove mentions of Exult from intro
	* palette.cc: fix uninitialized variable

2010-10-05 Dominik Reichardt <dominus@users.sourceforge.net>
	* data/bg/ and data/si: disabled Alt+KP+ and Alt+KP- key combination to switch 
	 resolution, it doesn't play nice with the new render code.

2010-10-05	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* keyactions.cc: Show message when mapedit keys are used and Exult is built
	  without ES support.

2010-10-01  Ryan Nunn <colourles@users.sourceforge.net>
	* Changed things so it is possible to open some of the options gumps from the
	  Exult menu (requires data from the games to work, but thats ok). Removed 
	  the old setup main menu screen and replaced it with the in game gumps.

2010-09-04  Ryan Nunn <colourles@users.sourceforge.net>
	* menulist.cc : Trying to stop mouse lag
	* mouse.cc : Stopping warping from occuring unless fastmouse is enable 
	  (otherwise mouse can get trapped when windowed)