@@ -44,13 +44,12 @@ void Image_window::show_scaled8to16_bilinear
 	Manip8to16 manip(paletted_surface->format->palette->colors,
 						inter_surface->format);
 	Scale_2xBilinear<unsigned char, uint16, Manip8to16>
-		((uint8*)draw_surface->pixels, x, y, w, h,
+		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
 		    ibuf->line_width, ibuf->height, 
 		    (uint16 *) inter_surface->pixels, 
 			inter_surface->pitch/
 				inter_surface->format->BytesPerPixel,
 			manip);
-	SDL_UpdateRect(inter_surface, 2*x, 2*y, 2*w, 2*h);
 	}
 
 void Image_window::show_scaled8to555_bilinear
@@ -63,13 +62,12 @@ void Image_window::show_scaled8to555_bilinear
 	Manip8to555 manip(paletted_surface->format->palette->colors,
 						inter_surface->format);
 	Scale_2xBilinear<unsigned char, uint16, Manip8to555>
-		((uint8*)draw_surface->pixels, x, y, w, h,
+		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
 		    ibuf->line_width, ibuf->height, 
 		    (uint16 *) inter_surface->pixels, 
 			inter_surface->pitch/
 				inter_surface->format->BytesPerPixel,
 			manip);
-	SDL_UpdateRect(inter_surface, 2*x, 2*y, 2*w, 2*h);
 	}
 
 void Image_window::show_scaled8to565_bilinear
@@ -82,13 +80,12 @@ void Image_window::show_scaled8to565_bilinear
 	Manip8to565 manip(paletted_surface->format->palette->colors,
 						inter_surface->format);
 	Scale_2xBilinear<unsigned char, uint16, Manip8to565>
-		((uint8*)draw_surface->pixels, x, y, w, h,
+		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
 		    ibuf->line_width, ibuf->height, 
 		    (uint16 *) inter_surface->pixels, 
 			inter_surface->pitch/
 				inter_surface->format->BytesPerPixel,
 			manip);
-	SDL_UpdateRect(inter_surface, 2*x, 2*y, 2*w, 2*h);
 	}
 
 void Image_window::show_scaled8to32_bilinear
@@ -101,13 +98,12 @@ void Image_window::show_scaled8to32_bilinear
 	Manip8to32 manip(paletted_surface->format->palette->colors,
 						inter_surface->format);
 	Scale_2xBilinear<unsigned char, uint32, Manip8to32>
-		((uint8*)draw_surface->pixels, x, y, w, h,
+		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
 			ibuf->line_width, ibuf->height, 
 			(uint32 *) inter_surface->pixels,
 			inter_surface->pitch/
 				inter_surface->format->BytesPerPixel,
 								manip);
-	SDL_UpdateRect(inter_surface, 2*x, 2*y, 2*w, 2*h);
 	}
 
 //
@@ -118,18 +114,15 @@ void Image_window::show_scaled8to16_BilinearPlus
 	int x, int y, int w, int h	// Area to show.
 	)
 	{
-	increase_area(x,y,w,h, 1,1,1,1, ibuf->width, ibuf->height);
-
 	Manip8to16 manip(paletted_surface->format->palette->colors,
 						inter_surface->format);
 	Scale_2xBilinearPlus<unsigned char, uint16, Manip8to16>
-		((uint8*)draw_surface->pixels, x, y, w, h,
+		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
 		    ibuf->line_width, ibuf->height, 
 		    (uint16 *) inter_surface->pixels, 
 			inter_surface->pitch/
 				inter_surface->format->BytesPerPixel,
 			manip);
-	SDL_UpdateRect(inter_surface, 2*x, 2*y, 2*w, 2*h);
 	}
 
 void Image_window::show_scaled8to555_BilinearPlus
@@ -142,13 +135,12 @@ void Image_window::show_scaled8to555_BilinearPlus
 	Manip8to555 manip(paletted_surface->format->palette->colors,
 						inter_surface->format);
 	Scale_2xBilinearPlus<unsigned char, uint16, Manip8to555>
-		((uint8*)draw_surface->pixels, x, y, w, h,
+		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
 		    ibuf->line_width, ibuf->height, 
 		    (uint16 *) inter_surface->pixels, 
 			inter_surface->pitch/
 				inter_surface->format->BytesPerPixel,
 			manip);
-	SDL_UpdateRect(inter_surface, 2*x, 2*y, 2*w, 2*h);
 	}
 
 void Image_window::show_scaled8to565_BilinearPlus
@@ -161,13 +153,12 @@ void Image_window::show_scaled8to565_BilinearPlus
 	Manip8to565 manip(paletted_surface->format->palette->colors,
 						inter_surface->format);
 	Scale_2xBilinearPlus<unsigned char, uint16, Manip8to565>
-		((uint8*)draw_surface->pixels, x, y, w, h,
+		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
 		    ibuf->line_width, ibuf->height, 
 		    (uint16 *) inter_surface->pixels, 
 			inter_surface->pitch/
 				inter_surface->format->BytesPerPixel,
 			manip);
-	SDL_UpdateRect(inter_surface, 2*x, 2*y, 2*w, 2*h);
 	}
 
 void Image_window::show_scaled8to32_BilinearPlus
@@ -180,11 +171,10 @@ void Image_window::show_scaled8to32_BilinearPlus
 	Manip8to32 manip(paletted_surface->format->palette->colors,
 						inter_surface->format);
 	Scale_2xBilinearPlus<unsigned char, uint32, Manip8to32>
-		((uint8*)draw_surface->pixels, x, y, w, h,
+		((uint8*)draw_surface->pixels, x+guard_band, y+guard_band, w, h,
 			ibuf->line_width, ibuf->height, 
 			(uint32 *) inter_surface->pixels,
 			inter_surface->pitch/
 				inter_surface->format->BytesPerPixel,
 								manip);
-	SDL_UpdateRect(inter_surface, 2*x, 2*y, 2*w, 2*h);
 	}
